--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="13.ico">
+  <meta name="Information" content="Where the information is at">
+  <meta name="Rodolfo Rodriguez" content="862177671">
 
-  <title>John Doe - Business Administration</title>
+  <title>Rodolfo Rodriguez - Admin of Administration</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">John Doe</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/11.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,34 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Rodolfo Rodriguez
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4"><br><br>
 
-        Enter bio here<br><br>
+        Conversational Spanish Speaker
+● The ability to work in a fast paced environment
+● Fast paced thinking
+● Ability to carry heavy objects<br><br>
 
-        Enter bio here
+        Ability to adapt to new programs/technology quickly, able to work and manage around them
+● Creative thinking
+● Public Speaking
+● Aware of Surroundings
+● On the spot solutions
+
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://github.com/rrodr169">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://www.learncs8.com/lab3/lab3-2.php">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://docs.google.com/document/u/1/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:youremail1@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -88,7 +96,11 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
+        <h2 class="mb-5">FruitLand and Ice Creamery - Manager
+09/17/2016 - 06/14/2019 
+Leadership Public Schools - After School Tutoring - Tutor
+Leadership Public Schools, Hayward ( Class of 2019) 
+</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
@@ -156,7 +168,7 @@
             <div>MBA in International Business</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2019 - December 2023</span>
           </div>
         </div>
 
@@ -191,7 +203,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="1Snakes.tiff" width="500px">
+             <img src="2Butterflies.tiff" width="500px"><br>
+    <img src="5TvGuy.tiff" width="500px">
+    <img src="6David.tiff" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +214,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Rodolfo Rodriguez</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
